    David Allsopp, review by David Allsopp, Alain Frisch, Nicolas Ojeda Bar,
    Gabriel Scherer and Damien Doligez)

### Tools:

* #6792, #8654 ocamldebug now supports program using Dynlink. This
   breaks compatibility with emacs modes.
   (Whitequark and Jacques-Henri Jourdan, review by Gabriel Scherer
    and Xavier Clerc)

### Standard library:

- #8657: Optimization in [Array.make] when initializing with unboxed
   or young values.
   (Jacques-Henri Jourdan, review by Gabriel Scherer and Stephen Dolan)

- #8634: Statistical memory profiling provided by the Gc.Memprof
   module.
   Incomplete version: does not sample objects allocated in the minor
   heap in native mode
   (Jacques-Henri Jourdan, review by Stephen Dolan, Gabriel Scherer and
    Damien Doligez)

- #7672, #1492: Add `Filename.quote_command` to produce properly-quoted
  commands for execution by Sys.command.
  (Xavier Leroy, review by David Allsopp and Damien Doligez)

- #8716: Optimize [Array.fill] and [Hashtbl.clear] with a new runtime primitive
  (Alain Frisch, review by David Allsopp, Stephen Dolan and Damien Doligez)

- #8530: List.sort: avoid duplicate work by chop
  (Guillaume Munch-Maccagnoni, review by David Allsopp, Damien Doligez and
   Gabriel Scherer)

### Other libraries:

- #1939, #2023: Implement Unix.truncate and Unix.ftruncate on Windows.
  (Florent Monnier and Nicolás Ojeda Bär, review by David Allsopp)

### Compiler user-interface and warnings:

- #8833: Hint for (type) redefinitions in toplevel session
  (Florian Angeletti, review by Gabriel Scherer)

- #2127: Refactor lookup functions
  Included observable changes:
    - makes the location of usage warnings and alerts for constructors more
      precise
    - don't warn about a constructor never being used to build values when it
      has been defined as private
  (Leo White, review by Thomas Refis)

- #8885: Warn about unused local modules
  (Thomas Refis, review by Alain Frisch)

### Build system:
